<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prusia"
    tools:context=".NuevoContacto">

    <TextView
        android:id="@+id/tvNuevoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nvC"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNuevoContacto" />

    <TextView
        android:id="@+id/tvApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/apellidos"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/empresa"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellidos" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.23844282" />

    <RadioGroup
        android:id="@+id/rgEmpresa"
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono">

        <RadioButton
            android:id="@+id/rbtEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empresa"
            android:textColor="@android:color/holo_blue_light" />

        <RadioButton
            android:id="@+id/rbtParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/particular"
            android:textColor="@android:color/holo_blue_light" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgGenero"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/swFavoritos"
        app:layout_constraintTop_toBottomOf="@+id/rgEmpresa">

        <RadioButton
            android:id="@+id/rbtHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:textColor="@android:color/holo_blue_light" />

        <RadioButton
            android:id="@+id/rbtMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:textColor="@android:color/holo_blue_light" />
    </RadioGroup>

    <Switch
        android:id="@+id/swFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/fav"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgEmpresa" />

    <SeekBar
        android:id="@+id/sbEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:progressTint="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toStartOf="@+id/tvEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvEdad" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/edadnum"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxLlamar" />

    <CheckBox
        android:id="@+id/cbxLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/llamar"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swFavoritos" />

    <Button
        android:id="@+id/btNCOk"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/ok"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btNCCancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <ImageView
        android:id="@+id/ivFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNuevoContacto"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/ivLlamar"
        android:layout_width="29dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNuevoContacto"
        app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />

    <ImageView
        android:id="@+id/ivParticularEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/ivLlamar"
        app:layout_constraintTop_toBottomOf="@+id/tvNuevoContacto"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <ImageView
        android:id="@+id/ivGenero"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/ivFavorito"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvNuevoContacto"
        app:srcCompat="@mipmap/ic_mujer" />
</androidx.constraintlayout.widget.ConstraintLayout>